--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "graphql": "^16.10.0",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.6.1",
-    "ngrx-store-localstorage": "^19.0.1",
+    "ngrx-store-localstorage": "19.0.0",
     "ngxtension": "^5.0.0",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
@@ -58,11 +58,11 @@
     "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.8",
-    "@angular-devkit/core": "^19.2.8",
-    "@angular-devkit/schematics": "^19.2.8",
+    "@angular-devkit/build-angular": "^19.2.9",
+    "@angular-devkit/core": "^19.2.9",
+    "@angular-devkit/schematics": "^19.2.9",
     "@angular-eslint/builder": "^19.3.0",
-    "@angular/cli": "^19.2.8",
+    "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.7",
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.8.0",
@@ -74,7 +74,7 @@
     "@ngrx/eslint-plugin": "^19.1.0",
     "@ngrx/schematics": "^19.1.0",
     "@parcel/watcher": "^2.5.1",
-    "@schematics/angular": "^19.2.8",
+    "@schematics/angular": "^19.2.9",
     "@swc/types": "^0.1.21",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/luxon": "^3.6.2",
@@ -88,10 +88,10 @@
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.1",
     "commitizen": "^4.3.1",
-    "cypress": "^14.3.1",
+    "cypress": "^14.3.2",
     "cz-conventional-changelog": "^3.3.0",
-    "daisyui": "^5.0.27",
-    "esbuild": "^0.25.2",
+    "daisyui": "^5.0.28",
+    "esbuild": "^0.25.3",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
