--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.10",
-    "@angular/cdk": "^19.2.15",
-    "@angular/common": "^19.2.10",
-    "@angular/compiler": "^19.2.10",
-    "@angular/core": "^19.2.10",
-    "@angular/forms": "^19.2.10",
-    "@angular/platform-browser": "^19.2.10",
-    "@angular/platform-browser-dynamic": "^19.2.10",
-    "@angular/router": "^19.2.10",
+    "@angular/animations": "^20.0.2",
+    "@angular/cdk": "^20.0.2",
+    "@angular/common": "^20.0.2",
+    "@angular/compiler": "^20.0.2",
+    "@angular/core": "^20.0.2",
+    "@angular/forms": "^20.0.2",
+    "@angular/platform-browser": "^20.0.2",
+    "@angular/platform-browser-dynamic": "^20.0.2",
+    "@angular/router": "^20.0.2",
     "@apollo/client": "^3.13.8",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^31.3.0",
-    "@ng-icons/phosphor-icons": "^31.3.0",
-    "@ngrx/effects": "^19.1.0",
-    "@ngrx/entity": "^19.1.0",
-    "@ngrx/operators": "^19.1.0",
-    "@ngrx/signals": "^19.1.0",
-    "@ngrx/store": "^19.1.0",
-    "@ngrx/store-devtools": "^19.1.0",
-    "@sentry/angular": "^9.17.0",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@ng-icons/core": "^32.0.0",
+    "@ng-icons/phosphor-icons": "^32.0.0",
+    "@ngrx/effects": "^19.2.1",
+    "@ngrx/entity": "^19.2.1",
+    "@ngrx/operators": "^19.2.1",
+    "@ngrx/signals": "^19.2.1",
+    "@ngrx/store": "^19.2.1",
+    "@ngrx/store-devtools": "^19.2.1",
+    "@sentry/angular": "^9.27.0",
+    "@tailwindcss/postcss": "^4.1.8",
     "animate.css": "^4.1.1",
     "apollo-angular": "^10.0.3",
     "apollo-upload-client": "^18.0.1",
@@ -58,55 +58,55 @@
     "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.11",
-    "@angular-devkit/core": "^19.2.11",
-    "@angular-devkit/schematics": "^19.2.11",
-    "@angular-eslint/builder": "^19.4.0",
-    "@angular/cli": "^19.2.11",
-    "@angular/compiler-cli": "^19.2.10",
+    "@angular-devkit/core": "^20.0.1",
+    "@angular-devkit/schematics": "^20.0.1",
+    "@angular-eslint/builder": "^20.0.0",
+    "@angular/build": "^20.0.1",
+    "@angular/cli": "^20.0.1",
+    "@angular/compiler-cli": "^20.0.2",
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.26.0",
-    "@graphql-codegen/cli": "^5.0.6",
-    "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@ngrx/eslint-plugin": "^19.1.0",
-    "@ngrx/schematics": "^19.1.0",
+    "@eslint/js": "^9.28.0",
+    "@graphql-codegen/cli": "^5.0.7",
+    "@graphql-codegen/typescript-apollo-angular": "^4.0.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@ngrx/eslint-plugin": "^19.2.1",
+    "@ngrx/schematics": "^19.2.1",
     "@parcel/watcher": "^2.5.1",
-    "@schematics/angular": "^19.2.11",
-    "@swc/types": "^0.1.21",
+    "@schematics/angular": "^20.0.1",
+    "@swc/types": "^0.1.22",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.31",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "angular-eslint": "^19.4.0",
-    "angular-oauth2-oidc": "^19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "angular-eslint": "^20.0.0",
+    "angular-oauth2-oidc": "^20.0.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.1",
     "commitizen": "^4.3.1",
-    "cypress": "^14.3.3",
+    "cypress": "^14.4.1",
     "cz-conventional-changelog": "^3.3.0",
-    "daisyui": "^5.0.35",
-    "esbuild": "^0.25.4",
-    "eslint": "^9.26.0",
+    "daisyui": "^5.0.43",
+    "esbuild": "^0.25.5",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.5",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.8",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3",
-    "typescript-eslint": "^8.32.0",
-    "zone.js": "~0.15.0"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.34.0",
+    "zone.js": "~0.15.1"
   },
   "config": {
     "commitizen": {
